[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-super-kombajn"
version = "0.1.0"
description = "Profesjonalny modułowy system analizy OSINT oparty na Pythonie 3.10+"
readme = "README.md"
authors = [
    {name = "Autor OSINT Super Kombajn", email = "kontakt@przyklad.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "phonenumbers>=8.13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/OSINT-Super-Kombajn"
"Bug Tracker" = "https://github.com/yourusername/OSINT-Super-Kombajn/issues"

[project.scripts]
osint-kombajn = "osint_super_kombajn.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
